--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,37 @@
-.gradle
-/build/
+# built application files
+*.apk
+*.ap_
 
-# Ignore Gradle GUI config
-gradle-app.setting
+# files for the dex VM
+*.dex
 
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
+# Java class files
+*.class
 
-# Cache of project
-.gradletasknamecache
+# generated files
+bin/
+build/
+gen/
+target/
 
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Emacs files
+*~
+\#*\#
+
+# IDEA files
+.idea/
+*.iml
+
+# Eclipse files
+.project
+.classpath
+.settings/
+
+# Gradle
+.gradle/
+
+# Mac files
+*.DS_Store
