--- a/build.gradle
+++ b/build.gradle
@@ -13,13 +13,13 @@ apply plugin: 'com.github.ben-manes.versions'
 apply plugin: 'com.github.sherter.google-java-format'
 
 libsDirName = 'lib' // simple workaround for error in startScripts task
-mainClassName = 'simple.flashcards.FlashcardGame' // Done change this setting to match your main class
+mainClassName = 'FlashcardGame' // TODO change this setting to match your main class
 
 jar {
     manifest {
         attributes 'Main-Class': mainClassName
     }
-}
+}    
 
 repositories {
     jcenter()
@@ -29,8 +29,8 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
 
-tasks.withType(JavaCompile) {
-    options.compilerArgs << "-Xlint:all"
+tasks.withType(JavaCompile) { 
+    options.compilerArgs << "-Xlint:all" 
 }
 
 tasks.withType(JavaExec) {
